@@ -10,6 +10,8 @@ Release date: TBA
 Core and Builtins
 -----------------
 
+- Issue #28932: Do not include <sys/random.h> if it does not exist.
+
 - Issue #28147: Fix a memory leak in split-table dictionaries: setattr()
   must not convert combined table into split table.
 
